updated css to fix bug on mobile regarding header sizing on smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -421,6 +421,23 @@ a{text-decoration: none;}
 
 
 @media screen and (max-width: 600px)    {
+    #welcome-tag {
+        width: 80%;
+    }
+    #welcome-tag h1, h2 {
+        margin: auto;
+    }
+
+    #welcome-tag h1 {
+        font-size: 22px;
+        line-height: 40px;
+    }
+
+    #welcome-tag h2 {
+       font-size: 16px;
+       line-height: 20px;
+    }
+
     .page_nav, #logo {
         font-size: 16px;
     }
